[package]
name = "boa_gc"
version = "0.4.1"
authors = [
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Nika Layzell <nika@thelayzells.com>",
]
description = "Tracing garbage collector plugin for Rust."
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "plugin", "memory"]
edition = "2018"

[features]
nightly = ["hashbrown/nightly", "serde/unstable"]
derive = ["gc_derive"]
unstable-config = []
unstable-stats = []

[dependencies]
hashbrown = "0.12.0"
spin = "0.9.2"
gc_derive = { path = "../gc_derive", version = "0.4.1", optional = true }
serde = { version = "1.0.0", default-features = false, features = ["rc", "alloc"], optional = true }

[dev-dependencies]
gc_derive = { path = "../gc_derive", version = "0.4.1" }
serde_json = { version = "1.0.66" }
